# crane_x7_ros_modified_by_group8

./: README.en.md  README.md
crane_x7/: package.xml
crane_x7_bringup/: package.xml
crane_x7_control/: package.xml
crane_x7_description/: package.xml
crane_x7_description/urdf/: camera.urdf  crane_x7.xacro
crane_x7_examples/: CMakeLists.txt  README.md  package.xml
crane_x7_examples/launch/: find_and_hold.launch  group6.launch
crane_x7_examples/scripts/: huru.py  nagi_uda.py  node1_pickup.py  node2_nagemae.py  node3_throw.py  pickuptest.py  ppoisute.py  punch.py  punch1.py  sitamae_throw.py  throw3.py  throw_pt1.py  throw_pt1_node.py  throw_pt2.py  uda_nagemae.py  uemae_throw.py
crane_x7_examples/src/: depth.cpp  image_processing.cpp  locate_estimate.cpp  main_node.cpp  move_arm.cpp
crane_x7_gazebo/: package.xml
crane_x7_gazebo/launch/: crane_x7_with_table.launch
crane_x7_gazebo/worlds/: table1.world  table3.world
crane_x7_moveit_config/: package.xml
crane_x7_msgs/: package.xml
